# zero2prod

./: Cargo.toml  Dockerfile  README.md  main.bicep
.github/workflows/: deploy.yml  rust.yml
scripts/: init_db.sh
src/: configuration.rs  main.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
